# fruitdata

./: .gitignore  Cargo.toml  LEARNING_GUIDE.md  QUICK_REFERENCE.md  README.md
src/: catalog.rs  lib.rs  main.rs  models.rs
